crates/alien-terraform/tests/generator/snapshots/generator__generator__helpers__eks_overlay_live_workload_helm_handoff.snap
---
source: crates/alien-terraform/tests/generator/helpers.rs
assertion_line: 56
expression: buf
---
=== versions.tf ===
terraform {
  required_version = ">= 1.5.0"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = ">= 5.0"
    }
    tls = {
      source  = "hashicorp/tls"
      version = ">= 4.0"
    }
    random = {
      source  = "hashicorp/random"
      version = ">= 3.6"
    }
  }
}

=== variables.tf ===
variable "resource_prefix" {
  type        = string
  description = "Optional stable physical resource prefix. Leave empty to generate one."
  default     = ""

  validation {
    condition     = var.resource_prefix == "" || (can(regex("^[a-z][a-z0-9-]{1,38}[a-z0-9]$", var.resource_prefix)) && length(regexall("--", var.resource_prefix)) == 0)
    error_message = "resource_prefix must be 3-40 characters: lowercase letters, numbers, and hyphens; start with a letter; end with a letter or number; and not contain consecutive hyphens."
  }
}

variable "name" {
  type        = string
  description = "Human-readable application name shown in setup and cloud IAM review metadata."
}

variable "token" {
  type        = string
  description = "Install token from the application setup page. This is the same token used by the deploy CLI --token flag."
  sensitive   = true
}

variable "manager_url" {
  type        = string
  description = "Optional manager endpoint used by pull-style runtimes."
  default     = ""
}

variable "stack_settings_json" {
  type        = string
  description = "Optional JSON-encoded StackSettings override supplied by deployment installers."
  default     = "{}"
  sensitive   = true
}

variable "aws_region" {
  type        = string
  description = "AWS region used by the AWS provider."
  default     = "us-east-1"
}

variable "managing_role_arn" {
  type        = string
  description = "ARN of the manager IAM identity allowed to assume management roles."
  default     = ""
}

variable "managing_account_id" {
  type        = string
  description = "Account ID hosting the manager. Referenced by resource-side IAM policies that scope cross-account image pulls. Empty disables those grants."
  default     = ""
}

variable "kubernetes_cluster_mode" {
  type        = string
  description = "Kubernetes cluster mode. Values: create or existing."
  default     = "create"
}

variable "kubernetes_namespace" {
  type        = string
  description = "Kubernetes namespace for runtime resources."
  default     = "default"
}

variable "eks_cluster_name" {
  type        = string
  description = "Existing EKS cluster name that Helm will install into."
  default     = ""
}

=== providers.tf ===
provider "aws" {
  region = var.aws_region
}

data "aws_caller_identity" "current" {}

data "aws_region" "current" {}

=== resource_prefix.tf ===
resource "random_id" "resource_prefix" {
  byte_length = 4
}

=== locals.tf ===
locals {
  resource_prefix          = var.resource_prefix == "" ? format("a%s", random_id.resource_prefix.hex) : var.resource_prefix
  deployment_name          = var.name
  deployment_platform      = "kubernetes"
  deployment_base_platform = "aws"
  deployment_target        = "eks"
  deployment_region        = data.aws_region.current.region
  deployment_management_config = {
    platform        = "aws"
    managingRoleArn = var.managing_role_arn
  }
  kubernetes_exposure = {
    mode = "disabled"
  }
  deployment_kubernetes_settings = merge(try(jsondecode(var.stack_settings_json).kubernetes, {}), { exposure = jsondecode(try(jsondecode(var.stack_settings_json).kubernetes.exposure, null) == null ? jsonencode(local.kubernetes_exposure) : jsonencode(jsondecode(var.stack_settings_json).kubernetes.exposure)) })
  deployment_settings            = merge(jsondecode(var.stack_settings_json), { kubernetes = local.deployment_kubernetes_settings })
  deployment_resources = [
    {
      id   = "data"
      type = "storage"
      importData = {
        bucketName = aws_s3_bucket.data.bucket
        bucketArn  = aws_s3_bucket.data.arn
      }
    },
    {
      id   = "execution-sa"
      type = "service-account"
      importData = {
        roleName                = aws_iam_role.execution_sa.name
        roleArn                 = aws_iam_role.execution_sa.arn
        stackPermissionsApplied = true
      }
    }
  ]
  kubernetes_kubeconfig      = ""
  kubernetes_kube_context    = ""
  alien_kubernetes_namespace = var.kubernetes_namespace
  helm_service_accounts = {
    execution = {
      annotations = {
        "eks.amazonaws.com/role-arn" = aws_iam_role.execution_sa.arn
      }
      labels = {}
    }
  }
  helm_manager_service_account = {
    annotations = {}
    labels      = {}
  }
  eks_oidc_issuer_host_path = trimprefix(data.aws_eks_cluster.target.identity[0].oidc[0].issuer, "https://")
  eks_oidc_provider_arn     = var.kubernetes_cluster_mode == "create" ? aws_iam_openid_connect_provider.eks[0].arn : data.aws_iam_openid_connect_provider.eks_existing[0].arn
  helm_values = {
    serviceAccounts       = local.helm_service_accounts
    managerServiceAccount = local.helm_manager_service_account
    stackSettings         = local.deployment_settings
    basePlatform          = local.deployment_base_platform
    serviceAccountPrefix  = local.resource_prefix
    heartbeat = {
      collection = {
        nodes = {
          enabled = true
        }
      }
    }
    clusterBootstrap = {
      metricsServer = {
        enabled = var.kubernetes_cluster_mode == "create"
        image   = "registry.k8s.io/metrics-server/metrics-server:v0.8.1"
      }
      storageClass = {
        default = {
          enabled     = var.kubernetes_cluster_mode == "create"
          name        = "gp3"
          provisioner = "ebs.csi.aws.com"
          parameters = {
            type      = "gp3"
            fsType    = "ext4"
            encrypted = "true"
          }
        }
      }
      ingress = {
        eksAutoMode = {
          enabled    = var.kubernetes_cluster_mode == "create"
          name       = "alb"
          controller = "eks.amazonaws.com/alb"
          scheme     = "internet-facing"
          subnetIds  = []
        }
      }
      compute = {
        eksAutoMode = {
          arm64NodePool = {
            enabled       = var.kubernetes_cluster_mode == "create"
            name          = "general-purpose-arm64"
            nodeClassName = "default"
            capacityType  = "on-demand"
            instanceCategories = [
              "c",
              "m",
              "r"
            ]
            minInstanceGeneration = "5"
            limits = {
              cpu    = "1000"
              memory = "1000Gi"
            }
          }
        }
      }
    }
  }
}

=== data.tf ===
resource "aws_s3_bucket" "data" {
  bucket        = "${local.resource_prefix}-data"
  force_destroy = true
  tags = {
    "managed-by"    = "deployment"
    deployment      = local.resource_prefix
    resource        = "data"
    "resource-type" = "storage"
  }
}

resource "aws_s3_bucket_server_side_encryption_configuration" "data" {
  bucket = aws_s3_bucket.data.id

  rule {
    apply_server_side_encryption_by_default {
      sse_algorithm = "AES256"
    }
  }
}

resource "aws_s3_bucket_ownership_controls" "data" {
  bucket = aws_s3_bucket.data.id

  rule {
    object_ownership = "BucketOwnerEnforced"
  }
}

resource "aws_s3_bucket_public_access_block" "data" {
  bucket                  = aws_s3_bucket.data.id
  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

resource "aws_s3_bucket_policy" "data" {
  bucket = aws_s3_bucket.data.id
  policy = jsonencode({ Version = "2012-10-17", Statement = [{ Sid = "DenyInsecureTransport", Effect = "Deny", Principal = "*", Action = "s3:*", Resource = [aws_s3_bucket.data.arn, "${aws_s3_bucket.data.arn}/*"], Condition = { Bool = { "aws:SecureTransport" = "false" } } }] })
}

=== execution_sa.tf ===
data "aws_eks_cluster" "target" {
  name = var.eks_cluster_name
}

data "tls_certificate" "eks_oidc" {
  url = data.aws_eks_cluster.target.identity[0].oidc[0].issuer
}

data "aws_iam_openid_connect_provider" "eks_existing" {
  count = var.kubernetes_cluster_mode == "existing" ? 1 : 0
  url   = data.aws_eks_cluster.target.identity[0].oidc[0].issuer
}

data "aws_iam_policy_document" "execution_sa_assume_role" {
  statement {
    effect = "Allow"
    actions = [
      "sts:AssumeRoleWithWebIdentity"
    ]

    principals {
      type = "Federated"
      identifiers = [
        local.eks_oidc_provider_arn
      ]
    }

    condition {
      test     = "StringEquals"
      variable = "${local.eks_oidc_issuer_host_path}:sub"
      values = [
        "system:serviceaccount:${var.kubernetes_namespace}:${local.resource_prefix}-execution-sa"
      ]
    }

    condition {
      test     = "StringEquals"
      variable = "${local.eks_oidc_issuer_host_path}:aud"
      values = [
        "sts.amazonaws.com"
      ]
    }
  }
}

resource "aws_iam_role" "execution_sa" {
  name               = length(format("%s-%s", local.resource_prefix, "execution-sa")) <= 64 ? format("%s-%s", local.resource_prefix, "execution-sa") : format("%s-%s", substr(format("%s-%s", local.resource_prefix, "execution-sa"), 0, 55), substr(sha1(format("%s-%s", local.resource_prefix, "execution-sa")), 0, 8))
  assume_role_policy = data.aws_iam_policy_document.execution_sa_assume_role.json
  tags = {
    "managed-by"    = "deployment"
    deployment      = local.resource_prefix
    resource        = "execution-sa"
    "resource-type" = "service-account"
  }
}

resource "aws_iam_role_policy" "execution_sa_set_0" {
  name   = "storage-data-read-0"
  role   = aws_iam_role.execution_sa.id
  policy = jsonencode({ Statement = [{ Action = ["s3:ListBucket", "s3:GetObject", "s3:GetObjectVersion", "s3:GetObjectAcl"], Effect = "Allow", Resource = ["arn:aws:s3:::${local.resource_prefix}-*", "arn:aws:s3:::${local.resource_prefix}-*/*"], Sid = "ReadS3Objects" }], Version = "2012-10-17" })
}

resource "aws_iam_openid_connect_provider" "eks" {
  count = var.kubernetes_cluster_mode == "create" ? 1 : 0
  url   = data.aws_eks_cluster.target.identity[0].oidc[0].issuer
  client_id_list = [
    "sts.amazonaws.com"
  ]
  thumbprint_list = [
    data.tls_certificate.eks_oidc.certificates[0].sha1_fingerprint
  ]
  tags = {
    Name                    = "${local.resource_prefix}-eks-oidc"
    "alien-resource-prefix" = local.resource_prefix
  }
}

=== import.tf ===
resource "terraform_data" "deployment_import" {
  input = {
    platform                    = local.deployment_platform
    token                       = var.token
    name                        = var.name
    resource_prefix             = local.resource_prefix
    setup_target                = ""
    setup_import_format_version = 1
    setup_fingerprint           = ""
    setup_fingerprint_version   = 0
    manager_url                 = var.manager_url
    management_config           = local.deployment_management_config
    stack_settings              = local.deployment_settings
    resources                   = local.deployment_resources
    basePlatform                = local.deployment_base_platform
  }
  depends_on = [
    aws_s3_bucket.data,
    aws_s3_bucket_server_side_encryption_configuration.data,
    aws_s3_bucket_ownership_controls.data,
    aws_s3_bucket_public_access_block.data,
    aws_s3_bucket_policy.data,
    aws_iam_role.execution_sa,
    aws_iam_role_policy.execution_sa_set_0,
    aws_iam_openid_connect_provider.eks
  ]
}

=== outputs.tf ===
output "deployment_target" {
  value       = "eks"
  description = "Terraform module target."
}

output "deployment_resource_prefix" {
  value       = local.resource_prefix
  description = "Physical resource prefix."
}

output "deployment_platform" {
  value       = local.deployment_platform
  description = "Target platform."
}

output "deployment_region" {
  value       = local.deployment_region
  description = "Target cloud region or location."
}

output "deployment_setup_target" {
  value       = ""
  description = "Setup target."
}

output "deployment_setup_import_format_version" {
  value       = 1
  description = "Setup import payload format version."
}

output "deployment_setup_fingerprint" {
  value       = ""
  description = "Setup compatibility fingerprint."
}

output "deployment_setup_fingerprint_version" {
  value       = 0
  description = "Setup fingerprint algorithm version."
}

output "deployment_management_config" {
  value       = jsonencode(local.deployment_management_config)
  description = "Manager import ManagementConfig JSON."
}

output "deployment_stack_settings" {
  value       = jsonencode(local.deployment_settings)
  description = "Manager import StackSettings JSON."
  sensitive   = true
}

output "deployment_resources" {
  value       = jsonencode(local.deployment_resources)
  description = "Manager import resources JSON."
}

output "deployment_base_platform" {
  value       = local.deployment_base_platform
  description = "Base cloud platform for Kubernetes targets."
}

output "kubernetes_kubeconfig" {
  value       = local.kubernetes_kubeconfig
  description = "Kubeconfig for managed Kubernetes clusters created by this module."
  sensitive   = true
}

output "kubernetes_kube_context" {
  value       = local.kubernetes_kube_context
  description = "Kube context for managed Kubernetes clusters created by this module."
}

output "helm_values" {
  value       = jsonencode(local.helm_values)
  description = "Helm values JSON for the manager-fetch Kubernetes install."
  sensitive   = true
}

=== README.md ===
# Terraform module - eks-live-workload

Target: `eks`.

Run:

```bash
terraform init -backend=false
terraform validate
terraform apply -var='name=eks-live-workload' -var='token=...'
```

This module exposes `deployment_management_config` / `deployment_stack_settings` / `deployment_resources` for external registration flows.
